1.为什么可以替换成这个？原来没有ConstructorInjectionProvider的时候，bind就是provider.put(type,(Provider<Type>)()->{  getInjectConstructor()之类的})，之前的type就没有起作用，是在getInjectConstructor()的时候起作用的，现在那直接用这个ConstructorInjectionProvider更合适